--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="titulo">
+    <h1>Sistema De Asignacion de monitores</h1>
+
+</div>
+<div class="contenBton">
+    <div class="boton1">
+        <a [routerLink]="['/monitores']" class="btn btn-primary">Ver Monitor</a>
+    </div>
+
+    <div class="boton2">
+        <a [routerLink]="['/monitoresAsignado']" class="btn btn-secondary">Ver Monitorias Asignadas</a>
+    </div>
+</div>
