--- a/src/app/components/monitores/monitores.component.css
+++ b/src/app/components/monitores/monitores.component.css
@@ -10,3 +10,9 @@
     width: 100%;
     height: 100 vh;
 }
+
+.titulo {
+    text-align: center;
+    font-family: cursive;
+    margin-top: 25px;
+}
