--- a/src/app/components/monitores/monitores.component.html
+++ b/src/app/components/monitores/monitores.component.html
@@ -25,8 +25,11 @@
             <td>{{item['semestre']}}</td>
             <td>{{item['cedula']}}</td>
             <td>{{item['contacto']}}</td>
-            <td><img class="icon" src="../../../assets/trash-alt-solid-24.png" alt="trash" (click)="delete(item['id'])">
-                <img class="icon" src="../../../assets/edit-alt-solid-24.png" alt="trash" (click)="openPopup(item)" data-bs-toggle="modal" data-bs-target="#exampleModal"> </td>
+            <td>
+                <i class='bx bxs-trash-alt icon' (click)="delete(item['id'])"></i>
+                <i class='bx bxs-edit-alt icon' (click)="openPopup(item)" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+
+                <td>
         </tr>
 
     </tbody>
