añdiendo modal sin css

--- a/src/app/components/monitores/monitores.component.html
+++ b/src/app/components/monitores/monitores.component.html
@@ -27,7 +27,7 @@
             <td>{{item['contacto']}}</td>
             <td>
                 <i class='bx bxs-trash-alt icon' (click)="delete(item['id'])"></i>
-                <i class='bx bxs-edit-alt icon' (click)="openPopup(item)" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+                <i class='bx bxs-edit-alt icon' (click)="openPopup(item)"></i>
 
                 <td>
         </tr>
@@ -36,12 +36,34 @@
 </table>
 <a [routerLink]="['/']" class="btn btn-secondary">Regresar</a>
 
-
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header" id="title">
                 <h4 class="modal-title">{{title}}</h4>
+            </div>
+            <div class="modal-body">
+
+
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<button type="button" class="btn btn-light" (click)="Cancelar()" data-bs-toggle="modal" data-bs-target="#modalToCLose">Monda</button>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="modalToCLose" tabindex="-1" aria-labelledby="modalToCLoseLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalToCLoseLabel">{{title}}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form #monitorForm="ngForm" name="monitorForm">
@@ -74,18 +96,20 @@
                         </div>
                     </div>
                 </form>
-
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <!-- <button (click)="Cancelar()" type="button" class="btn btn-primary">Save changes</button> -->
+
                 <button type="button" [style.display]="isVisible ? 'block' : 'none'" class="btn btn-dark" (click)="UpdateMonitor()">
                     Actualizar
                 </button>
                 <button type="button" [style.display]="isVisible2 ? 'block' : 'none'" class="btn btn-dark" (click)="crearMonitor(monitor)" [disabled]="monitorForm.invalid">
                     Crear
                 </button>
-                <button type="button" class="btn btn-light" (click)="Cancelar()">
+                <!--  <button type="button" class="btn btn-light" (click)="Cancelar()">
             Cancelar
-          </button>
+          </button> -->
             </div>
         </div>
     </div>
